--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -19,13 +19,40 @@
 			<ul class="about_list">
 			{% for member in members_list %}
 				{% if member.activity_status == 'MC' %}
-					<li class="mentor-cat"><a href="{{ member.githubuser }}"><img src="{{ MEDIA_URL }}{{ member.profile_picture.url }}" alt="{{ member.fullname }}" />{{ member.fullname }}</a> (Mentor cat)<li>
+					
+					<li class="mentor-cat">
+					<a href="{{ member.githubuser }}">
+					{% if member.profile_picture %}
+						<img src="{{ MEDIA_URL }}{{ member.profile_picture.url|default_if_none:"" }}" alt="{{ member.fullname }}" />
+					{% endif %}
+					{{ member.fullname }}</a> (Mentor cat)<li>
+				     
 				{% elif member.activity_status == 'AC' %}
-					<li class="active-cat"><a href="{{ member.githubuser }}"><img src="{{ MEDIA_URL }}{{ member.profile_picture.url }}" alt="{{ member.fullname }}" />{{ member.fullname }}</a> (Active cat)<li>
+					
+					<li class="active-cat">
+					<a href="{{ member.githubuser }}">
+					{% if member.profile_picture %}
+						<img src="{{ MEDIA_URL }}{{ member.profile_picture.url|default_if_none:"" }}" alt="{{ member.fullname }}" />
+					{% endif %}
+					{{ member.fullname }}</a> (Active cat)<li>
+			
 				{% elif member.activity_status == 'LC' %}
-					<li class="lazy-cat"><a href="{{ member.githubuser }}"><img src="{{ MEDIA_URL }}{{ member.profile_picture.url }}" alt="{{ member.fullname }}" />{{ member.fullname }}</a> (Lazy cat)<li>	
+					
+					<li class="lazy-cat">
+					<a href="{{ member.githubuser }}">
+					{% if member.profile_picture %}
+						<img src="{{ MEDIA_URL }}{{ member.profile_picture.url|default_if_none:"" }}" alt="{{ member.fullname }}" />
+					{% endif %}
+					{{ member.fullname }}</a> (Lazy cat)<li>	
+				
 				{% elif member.activity_status == 'SC' %}
-					<li class="sleepy-cat"><a href="{{ member.githubuser }}"><img src="{{ MEDIA_URL }}{{ member.profile_picture.url }}" alt="{{ member.fullname }}" />{{ member.fullname }}</a> (Sleepy cat)<li>
+					<li class="sleepy-cat">
+					<a href="{{ member.githubuser }}">
+					{% if member.profile_picture %}
+						<img src="{{ MEDIA_URL }}{{ member.profile_picture.url|default_if_none:"" }}" alt="{{ member.fullname }}" />i
+					{% endif %}}
+					{{ member.fullname }}</a> (Sleepy cat)<li>
+				
 				{% endif %}	
 			{% endfor %}
 			</ul>
