--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,7 +159,7 @@ strong {
 
 #frontpage{
 	height: 350px;
-	background: url(groupmeet.jpg) no-repeat fixed;
+	background: url(../css/groupmeet.jpg) no-repeat fixed;
 	float:top;
 }
 
