fixed member page to display image

--- a/web/templates/pages/member_page.html
+++ b/web/templates/pages/member_page.html
@@ -24,7 +24,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4 col-xs-6">
-			{% if member.profile_picture %}
+			{% if user.profile_picture %}
 				<img src="{{ MEDIA_URL }}{{ user.profile_picture.url|default_if_none:"" }}" alt="{{ user.user.first_name }}" />
 			{% endif %}
 			<p><strong>GitHub Name:</strong></p>
