--- a/web/templates/pages/edituser.html
+++ b/web/templates/pages/edituser.html
@@ -6,7 +6,7 @@
 
 {% block content%}
 
-	<form method="POST">{% csrf_token %}
+	<form enctype="multipart/form-data" method="POST">{% csrf_token %}
 		{{ userprofileform.as_p }}
 		<button type="submit" class="save btn btn-default">Save</button>
 	</form>
