--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -10,7 +10,7 @@
 			<h1>Who is who?</h1>
 		</div>
 		<div class="col-lg-6 col-sm-5">
-			<p>This page will show all our active members.</p>
+			<p>This page shows all our active members.</p>
 		</div>
 	</header>
 
@@ -21,60 +21,40 @@
 	<div class="row">
 		<div>
 			<ul class="about_list">
+
 			{% for member in members_list %}
 
 				{% if member.activity_status == 'MENTOR' %}
 					
 					<li class="mentor-cat">
-					<a href="{% url 'pages-member-detail' user_id=member.id %}">
-						{% if member.profile_picture %}
-							<img src="{{ MEDIA_URL }}{{ member.profile_picture.url|default_if_none:"" }}" alt="{{ member.user.first_name }}" />
-						{% endif %}
-						{{ member.user.first_name }} {{ member.user.last_name }}
-					</a> 
-					(Mentor cat)
-					<li>
-				     
+
 				{% elif member.activity_status == 'ACTIVE' %}
-					
+
 					<li class="active-cat">
-					<a href="{% url 'pages-member-detail' user_id=member.id %}">
-						{% if member.profile_picture %}
-							<img src="{{ MEDIA_URL }}{{ member.profile_picture.url|default_if_none:"" }}" alt="{{ member.user.first_name }}" />
-						{% endif %}
-						{{ member.user.first_name }} {{ member.user.last_name }}
-					</a> 
-					(Active cat)
-					<li>
-			
+
 				{% elif member.activity_status == 'LAZY' %}
-					
+
 					<li class="lazy-cat">
+
+				{% elif member.activity_status == 'SLEEPY' %}
+				
+					<li class="sleepy-cat">
+
+				{% endif %}	
+
 					<a href="{% url 'pages-member-detail' user_id=member.id %}">
 						{% if member.profile_picture %}
 							<img src="{{ MEDIA_URL }}{{ member.profile_picture.url|default_if_none:"" }}" alt="{{ member.user.first_name }}" />
 						{% endif %}
 						{{ member.user.first_name }} {{ member.user.last_name }}
 					</a> 
-					(Lazy cat)
-					<li>	
-				
-				{% elif member.activity_status == 'SLEEPY' %}
-					<li class="sleepy-cat">
-					<a href="{% url 'pages-member-detail' user_id=member.id %}">
-						{% if member.profile_picture %}
-							<img src="{{ MEDIA_URL }}{{ member.profile_picture.url|default_if_none:"" }}" alt="{{ member.user.first_name }}" />i
-						{% endif %}}
-						{{ member.user.first_name }} {{ member.user.last_name }}
-					</a> 
-					(Sleepy cat)
+					{{ member.get_activity_status_display }}
 					<li>
-				
-				{% endif %}	
+
 			{% endfor %}
+
 			</ul>
 		</div>			
 	</div>
 
 {% endblock content%}
-
