--- a/web/templates/pages/links.html
+++ b/web/templates/pages/links.html
@@ -4,21 +4,16 @@
 
 {% block content%}
 
+<div class="row">
 	<h1>Useful links: </h1>
-	<div class="links">
-		<p><a href="http://www.designforfounders.com/web-app-ux/">15 Timeless Rules for Creating Intuitive Web Apps (With Examples)</a></p>
-		<p><a href="http://goodui.org">Good user interface datastories</a></p>
-		<p><a href="http://designschool.canva.com/">Canva</a></p>
-		<p><a href="http://tympanus.net/codrops/">Codrops</a></p>
-		<p><a href="http://www.cssauthor.com/">CSS author</a></p>
-		<p><a href="http://uxporn.uxpin.com/">UXPorn</a></p>
-	</div>
-
-	<form class="navbar-form navbar-right" role="search">
-		<div class="form-group">
-			<input type="text" class="form-control" placeholder="Search">
-		</div>
-		<button type="submit" class="btn btn-default">Submit</button>
-	</form>
+</div>
+<div class="links">
+	<p><a href="http://www.designforfounders.com/web-app-ux/">15 Timeless Rules for Creating Intuitive Web Apps (With Examples)</a></p>
+	<p><a href="http://goodui.org">Good user interface datastories</a></p>
+	<p><a href="http://designschool.canva.com/">Canva</a></p>
+	<p><a href="http://tympanus.net/codrops/">Codrops</a></p>
+	<p><a href="http://www.cssauthor.com/">CSS author</a></p>
+	<p><a href="http://uxporn.uxpin.com/">UXPorn</a></p>
+</div>
 
 {% endblock content%}
