--- a/web/templates/pages/about.html
+++ b/web/templates/pages/about.html
@@ -9,6 +9,7 @@
 	<div class="row">
 		<h2 class="about">About CodeCatz</h2>
 	</div>
+	<div class="container">
 		<p class="intro">CodeCatz is a coding study group where women are always in majority. The group is dedicated to all women who want to learn coding, however men are welcomed too. Catz pass their coding knowledge to kittens through various group and/or personal projects and when the kittens are more skilled, they pass their gained knowledge to new beginners. </p>
 		<p><strong>The objective of CodeCats is to assist women to enter in to the world of coding and change the world</strong>.</p>
 		<p class="intro">CodeCatz have only <strong>two rules</strong> for the members: <strong>chocolate</strong> at the meetings and <strong>full dedication to coding</strong>.</p>
