trackcat title changed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,9 +75,8 @@ footer {
 
 #frontpage_title {
 	font-family: 'Open Sans', sans-serif;
-	font-weight: 600;
 	font-size: 80px;
-	color: #000000;
+	color: #000000 !important;
 	text-align: left;
 	margin-top: 15px;
 	width: 350px;
