--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -7,7 +7,7 @@
 	<!-- Main jumbotron for a primary message -->
 	<div id="frontpage">
 		<div>
-		<h1 id="frontpage_title">TrackCat</h1>
+		<h1 id="frontpage_title">Track<strong>Cat</strong></h1>
 		</div>
 	</div>
 	<!--Row with three columns-->
