--- a/web/templates/pages/about.html
+++ b/web/templates/pages/about.html
@@ -7,7 +7,7 @@
 {% load staticfiles %}
 
 	<div class="row">
-		<h2 class="about">About CodeCatz</h2>
+		<h1 id="about">About CodeCatz</h1>
 	</div>
 	<div class="container">
 		<p class="intro">CodeCatz is a coding study group where women are always in majority. The group is dedicated to all women who want to learn coding, however men are welcomed too. Catz pass their coding knowledge to kittens through various group and/or personal projects and when the kittens are more skilled, they pass their gained knowledge to new beginners. </p>
