--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -15,58 +15,57 @@
 	</head>
 
 	<body data-spy="scroll" data-target="#topnav">
-	<div class="navbar navbar-inverse navbar-fixed-top" id="topnav">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="{% url 'pages-index' %}"><img class="CClogo" alt="CodeCatz" src="{% static 'img/CodeCatz.jpg' %}" alt="Expose" height="17px" /></a>
+		<div class="navbar navbar-inverse navbar-fixed-top" id="topnav">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="{% url 'pages-index' %}"><img class="CClogo" alt="CodeCatz" src="{% static 'img/CodeCatz.jpg' %}" height="17px" /></a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<div id="gbCountdown">&nbsp;</div>
+					<ul class="nav navbar-nav">
+						<li><a href="{% url 'pages-index' %}">Home</a></li>
+						<li class="{% current 'pages-about' %}"><a href="{% url 'pages-about' %}">About</a></li>
+						<li class="{% current 'pages-projects' %}"><a href="{% url 'pages-projects' %}">Projects</a></li>
+						<li class="{% current 'pages-tasks' %}"><a href="{% url 'pages-tasks' %}">Tasks</a></li>
+						<li class="{% current 'pages-members' %}"><a href="{% url 'pages-members' %}">Members</a></li>
+						<li class="{% current 'pages-events' %}"><a href="{% url 'pages-events' %}">Events</a></li>
+						<li class="{% current 'pages-login' %}"><a href="{% url 'pages-login' %}">Login</a></li>
+						<li class="{% current 'pages-links' %}"><a href="{% url 'pages-links' %}">Help</a></li>
+					</ul>
+				</div>
+		  <!--/.navbar-collapse -->
 			</div>
-			<div class="navbar-collapse collapse">
-				<div id="gbCountdown">&nbsp;</div>
-				<ul class="nav navbar-nav">
-					<li><a href="{% url 'pages-index' %}">Home</a></li>
-					<li class="{% current 'pages-about' %}"><a href="{% url 'pages-about' %}">About</a></li>
-					<li class="{% current 'pages-projects' %}"><a href="{% url 'pages-projects' %}">Projects</a></li>
-					<li class="{% current 'pages-tasks' %}"><a href="{% url 'pages-tasks' %}">Tasks</a></li>
-					<li class="{% current 'pages-members' %}"><a href="{% url 'pages-members' %}">Members</a></li>
-					<li class="{% current 'pages-events' %}"><a href="{% url 'pages-events' %}">Events</a></li>
-					<li class="{% current 'pages-login' %}"><a href="{% url 'pages-login' %}">Login</a></li>
-					<li class="{% current 'pages-links' %}"><a href="{% url 'pages-links' %}">Help</a></li>
-				</ul>
-			</div>
-        <!--/.navbar-collapse -->
 		</div>
-	</div>
-		<div class="container countdown">
-			
-			{% block content %}{% endblock content %}
-		</div><!-- /.container for main content -->
-
-		<div id="push"></div>
+		<div id="wrap">
+			<div class="container countdown">	
+				{% block content %}{% endblock content %}
+			</div><!-- /.container for main content -->
+			<div id="push"></div>
 		</div>
 
 		<footer>
 			<div class="container">
-					<div class="col-md-4">
-						<ul class="footer-links">
-							<li><a href="{% url 'pages-about' %}">Sponsors</a></li>
-							<li><a href="{% url 'pages-privacy' %}">Privacy</a></li>
-							<li><a href="{% url 'pages-about' %}">Support</a></li>
-						</ul>
-					</div> <!-- end col-md-5 -->
-					<div class="col-md-4">
-						<a href="{% url 'pages-index' %}"><img src="{% static "img/CodeCatz.jpg" %}"/></a>
-					</div> <!-- end col-md-2 -->
-					<div class="col-md-4" id="address">
-						<p><strong>CodeCatz</strong><br>
-							RAMPA Laboratorij<br>
-							Kersnikova ulica 4, Ljubljana<br>
-						</p>
-					</div>
+				<div class="col-md-4">
+					<ul class="footer-links">
+						<li><a href="{% url 'pages-about' %}">Sponsors</a></li>
+						<li><a href="{% url 'pages-privacy' %}">Privacy</a></li>
+						<li><a href="{% url 'pages-about' %}">Support</a></li>
+					</ul>
+				</div> <!-- end col-md-5 -->
+				<div class="col-md-4">
+					<a href="{% url 'pages-index' %}"><img src="{% static "img/CodeCatz.jpg" %}"/></a>
+				</div> <!-- end col-md-2 -->
+				<div class="col-md-4" id="address">
+					<p><strong>CodeCatz</strong><br>
+						RAMPA Laboratorij<br>
+						Kersnikova ulica 4, Ljubljana<br>
+					</p>
+				</div>
 			</div><!-- end container -->
 		</footer>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
