created task_edit form which is connected to task edit form

--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -30,6 +30,9 @@
 								none
 							{% endif %}
 						</p>
+						<div class="col-lg-6 col-sm-7">
+			<a class="btn btn-default" href="{% url 'task-edit' task_id=task.id %}"><span class="glyphicon glyphicon-pencil"></span></a>
+						</div>
 				</div>
 
 			{% endfor %}
