Added block custom_js back to the base.html

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -73,5 +73,6 @@
 		<script type="text/javascript" src="{% static 'js/countdown.js' %}"></script>
 		<script type="text/javascript" src="{% static 'js/jquery.datetimepicker.js' %}"></script>
 		<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+		{% block custom_js %}{% endblock custom_js %}
 	</body>
 </html>
