--- a/web/templates/pages/project_detail.html
+++ b/web/templates/pages/project_detail.html
@@ -5,8 +5,10 @@
 		<div class="row">
 			<div class="col-md-8 col-xs-6">
 				<h1><a href="{% url 'project-detail' project_id=project.project_id %}">{{ project.project_name }}</a></h1>
-				<a class="btn btn-default" href="{% url 'project-new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-				<a class="btn btn-default" href="{% url 'project-edit' project_id=project.project_id %}"><span class="glyphicon glyphicon-pencil"></span></a>
+				{% if user.is_authenticated %}
+					<a class="btn btn-default" href="{% url 'project-new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"> Add new</span></a>
+					<a class="btn btn-default" href="{% url 'project-edit' project_id=project.project_id %}"><span class="glyphicon glyphicon-pencil"> Edit</span></a>
+				{% endif %}
 			</div>
 		</div>
 		<div class="row">
@@ -35,11 +37,13 @@
 				<p>{{ project.project_description }}</p>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-8 col-xs-6">	
-				<p><strong> For update the project you must be logged in. <a href="{% url 'pages-login' %}">Login</a></strong></p>
+		{% if not user.is_authenticated %}
+			<div class="row">
+				<div class="col-md-8 col-xs-6">	
+					<p><strong> For update the project you must be logged in. <a href="{% url 'pages-login' %}">Login</a></strong></p>
+				</div>
 			</div>
-		</div>
+		{% endif %}
 	{% else %}
 		<p class="alert alert-warning">This project does not exists in your projects list.</p>
 		<p>Return to <a href="{% url 'pages-projects' %}">Projects</a></p>
