--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -9,13 +9,14 @@
 			<h1>All CodeCatz Tasks</h1>
 		</div>
 	</header>
+	
+	{% if user.is_authenticated %}
+		<a class="btn btn-default" href="{% url 'task-new' %}"><span class="glyphicon glyphicon-pencil"> Add new</span></a>
+	{% endif %}	
 
 	{% if task_list %}
 
-		<div class="row">
-
-			{% for task in task_list %}
-				
+			{% for task in task_list %}	
 				<div class="row">
 					<div class="col-md-3 col-xs-6">
 						<h3><strong>{{ task.title }}</strong></h3>
@@ -31,25 +32,27 @@
 									none
 								{% endif %}
 							</p>
-							<div class="row">
-								<div class="col-lg-6 col-sm-7">
-									{% if user.is_authenticated %}
-										<a class="btn btn-default" href="{% url 'task-edit' task_id=task.id %}"><span class="glyphicon glyphicon-pencil"> Edit</span></a>
-									{% else %}
-										<div><button type="button" class="btn btn-info"><a href="{% url 'pages-login'%}">Login to edit task.</a></button>
-										</div>
-									{% endif %}
-								</div>
-							</div>
 					</div>
 				</div>
+				{% if user.is_authenticated %}
+					<div>
+						<p><a class="btn btn-default" href="{% url 'task-edit' task_id=task.id %}"><span class="glyphicon glyphicon-pencil"> Edit</span></a></p>
+					</div>
+				{% endif %}	
 			{% endfor %}
-
-		</div>
-
+			  
+		{% if not user.is_authenticated %}
+			<div class="row">
+				<p><a href="{% url 'task-new' %}">Login </a>to edit tasks.</strong></p>
+			</div>
+		{% endif %}
+			  
 	{% else %}
 		<div class="alert alert-info">
 			<p>There are currently no tasks in tasks list.</p>
+			  {% if user.is_authenticated %}
+			  		<a class="btn btn-default" href="{% url 'task-new' %}"><span class="glyphicon glyphicon-pencil"> Add new</span></a>
+				{% endif %}
 		</div>
 
 	{% endif %}
