new tasks and task

--- a/web/templates/pages/task_new.html
+++ b/web/templates/pages/task_new.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-		<h1>Add your task</h1>
+		<h1>Add new task</h1>
 		<br />
 		<div>
 			<form method="POST">{% csrf_token %}
