Fixed Edit Profile link

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -44,7 +44,7 @@
 									<b class="caret"></b>
 								</a>
 								<ul class="dropdown-menu">
-								<li><a href="#">Edit profile</a></li>
+								<li><a href="{% url 'pages-edit-user' %}">Edit profile</a></li>
 									<li class="divider"></li>
 									<li>
 										<a href="{% url 'logout' %}?next={% firstof request.path '/' %}">
