--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -15,9 +15,9 @@
 	{% endif %}	
 
 	{% if task_list %}
-
+		<div class="row">
 			{% for task in task_list %}	
-				<div class="row">
+				
 					<div class="col-md-3 col-xs-6">
 						<h3><strong>{{ task.title }}</strong></h3>
 							<p><strong>Assigned to:</strong> {{ task.assigned_id }}</p>
@@ -25,20 +25,29 @@
 							<p><strong>Part of project:</strong> <a href="{% url 'web.views.project_detail' project_id=task.project_id.project_id %}"> {{ task.project_id.project_name }}</a></p>
 							<br />
 							<p><strong>Description:</strong> {{ task.description }}</p>
-							<p class=deadline><strong>Deadline:</strong>
+							<p class="deadline"><strong>Deadline:</strong>
 								{% if task.deadline %}
 									{{ task.deadline|date:"d. M Y"|lower }}
 								{% else %}
 									none
 								{% endif %}
 							</p>
+							{% if user.is_authenticated %}
+								<div>
+									<a class="btn btn-default" href="{% url 'task-edit' task_id=task.id %}">Edit</a>
+								</div>
+							{% endif %}	
 					</div>
-				</div>
-				{% if user.is_authenticated %}
-					<div>
-						<p><a class="btn btn-default" href="{% url 'task-edit' task_id=task.id %}">Edit</a></p>
-					</div>
-				{% endif %}	
+					{% if forloop.last %}
+						  </div>
+					{% else %}
+						{% if forloop.counter|divisibleby:"4" %}
+			  				</div>
+							<div class="row">
+						{% endif %}
+			  		{% endif %}
+			  
+				
 			{% endfor %}
 			  
 		{% if not user.is_authenticated %}
@@ -50,9 +59,6 @@
 	{% else %}
 		<div class="alert alert-info">
 			<p>There are currently no tasks in tasks list.</p>
-			  {% if user.is_authenticated %}
-			  		<a class="btn btn-default" href="{% url 'task-new' %}"><span class="glyphicon glyphicon-pencil"> Add new</span></a>
-				{% endif %}
 		</div>
 
 	{% endif %}
