--- a/web/templates/pages/project_edit.html
+++ b/web/templates/pages/project_edit.html
@@ -40,16 +40,16 @@
 						<span class="help-block col-sm-9 col-sm-offset-3">{{ projectform.project_description.errors }}</span>
 					{% endif %}
 				</div>
-				<div class="form-group {% if projectform.status_id.errors %}has-error{% endif %}">
-					<label for="{{ projectform.status_id.auto_id }}" class="col-sm-3 control-label">
-						{% if projectform.status_id.field.required %}*{% endif %}
-						{{ projectform.status_id.label }}
+				<div class="form-group {% if projectform.status.errors %}has-error{% endif %}">
+					<label for="{{ projectform.status.auto_id }}" class="col-sm-3 control-label">
+						{% if projectform.status.field.required %}*{% endif %}
+						{{ projectform.status.label }}
 					</label>
 					<div class="col-sm-9">
-						{{ projectform.status_id }}
+						{{ projectform.status }}
 					</div>
-					{% if projectform.status_id.errors %}
-						<span class="help-block col-sm-9 col-sm-offset-3">{{ projectform.status_id.errors }}</span>
+					{% if projectform.status.errors %}
+						<span class="help-block col-sm-9 col-sm-offset-3">{{ projectform.status.errors }}</span>
 					{% endif %}
 				</div>
 				<div class="form-group {% if projectform.project_deadline.errors %}has-error{% endif %}">
