--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -40,7 +40,12 @@
 						<li class="dropdown" id="menuLogin">
 							{% if user.is_authenticated %}
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-									Hi, {{ user.first_name }}
+									Hi, 
+									{% if user.first_name %}
+										{{ user.first_name }}
+									{% else %}
+										{{ user.username }}
+									{% endif %}
 									<b class="caret"></b>
 								</a>
 								<ul class="dropdown-menu">
