--- a/web/templates/pages/events.html
+++ b/web/templates/pages/events.html
@@ -8,10 +8,14 @@
 		<div class="col-lg-6 col-sm-7">
 			<h1>All CodeCatz Events</h1>
 		</div>
+	</header>
+
+	<div class= "row">
 		<div class="col-lg-6 col-sm-5">
 			<p>This page will show all our events and photo gallery.</p>
 		</div>
-	</header>	
+	</div>
+		
 	
 	<h3><a href="/gallery">Gallery</a></h3>
 	
