--- a/web/templates/pages/links.html
+++ b/web/templates/pages/links.html
@@ -4,16 +4,21 @@
 
 {% block content%}
 
+<header class="row">
+	<div class="col-lg-6 col-sm-7">
+		<h1>Useful links for the curious:</h1>
+	</div>
+</header>
+
 <div class="row">
-	<h1>Useful links: </h1>
-</div>
-<div class="links">
-	<p><a href="http://www.designforfounders.com/web-app-ux/">15 Timeless Rules for Creating Intuitive Web Apps (With Examples)</a></p>
-	<p><a href="http://goodui.org">Good user interface datastories</a></p>
-	<p><a href="http://designschool.canva.com/">Canva</a></p>
-	<p><a href="http://tympanus.net/codrops/">Codrops</a></p>
-	<p><a href="http://www.cssauthor.com/">CSS author</a></p>
-	<p><a href="http://uxporn.uxpin.com/">UXPorn</a></p>
+	<div class="col-lg-6 col-sm-7">
+		<p><a href="http://www.designforfounders.com/web-app-ux/">15 Timeless Rules for Creating Intuitive Web Apps (With Examples)</a></p>
+		<p><a href="http://goodui.org">Good user interface datastories</a></p>
+		<p><a href="http://designschool.canva.com/">Canva</a></p>
+		<p><a href="http://tympanus.net/codrops/">Codrops</a></p>
+		<p><a href="http://www.cssauthor.com/">CSS author</a></p>
+		<p><a href="http://uxporn.uxpin.com/">UXPorn</a></p>
+	</div>
 </div>
 
 {% endblock content%}
