--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -4,15 +4,18 @@
 
 {% block content%}
 
-
 	<header class="row">
 		<div class="col-lg-6 col-sm-7">
 			<h1>Who is who?</h1>
 		</div>
-		<div class="col-lg-6 col-sm-5">
+	</header>
+	
+	<div class="row">
+		<div class="col-lg-6 col-sm-7">
 			<p>This page shows all our active members.</p>
 		</div>
-	</header>
+	</div>
+	
 
 	<div class="row">
 		<div>
