--- a/web/templates/pages/projects.html
+++ b/web/templates/pages/projects.html
@@ -8,10 +8,14 @@
 		<div class="col-lg-6 col-sm-7">
 			<h1>All CodeCatz Projects</h1>
 		</div>
-		<div class="col-lg-6 col-sm-5">
-			<p>This page will show all our projects and who is working on what.</p>
-		</div>
 	</header>
+	
+	<div class="row">
+		<div class="col-lg-6 col-sm-5">
+			<p>This page shows all our projects and who is working on what.</p>
+		</div>
+	</div>
+
 	{% if user.is_authenticated %}
 		<div class="row">
 			<div class="col-lg-6 col-sm-7">
