Typo "does not exists" -> "does not exist"

--- a/web/templates/pages/member_page.html
+++ b/web/templates/pages/member_page.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>	
 	{% else %}
-		<p class="alert alert-warning">This member does not exists.</p>
+		<p class="alert alert-warning">This member does not exist.</p>
 		<p>Return to <a href="{% url 'pages-members' %}">Members</a></p>
 	{% endif %}
 
